--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "timezone-helper",
+  "name": "@goktugcy/timezone-helper",
   "version": "1.0.0",
   "description": "Timezone Helper is a Javascript library package designed to simplify working with dates and times across different time zones.",
   "main": "index.js",
