--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/goktugcy/timezone-helper.git"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@goktugcy"
+    "@goktugcy:registry": "https://npm.pkg.github.com"
   },
   "keywords": [
     "timezone",
