--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/goktugcy/timezone-helper.git"
   },
   "publishConfig": {
-    "@goktugcy:registry": "https://npm.pkg.github.com"
+    "registry": "https://registry.npmjs.org/"
   },
   "keywords": [
     "timezone",
